--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "githib.com/catxcoding/astrobaby"
+        "url": "github.com/catxcoding/astrobaby"
     },
     "author": "",
     "license": "MIT",
