--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "install:server": "cd server && npm install",
         "install:client": "cd client && npm install",
         "seed": "cd server && npm run seed",
-        "build": "cd server &&  npm install &*& cd ../client && npminstall  && npm run build",
+        "build": "cd server &&  npm install &&  cd ../client && npm install  && npm run build" 
+,
         "build:client": "cd client && npm run build",
         "heroku-postbuild": "npm run build:client"
     },
