--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
         "install:server": "cd server && npm install",
         "install:client": "cd client && npm install",
         "seed": "cd server && npm run seed",
-        "build": "cd server &&  npm install &&  cd ../client && npm install  && npm run build" 
-,
+        "build": "cd server &&  npm install &&  cd ../client && npm install  && npm run build",
         "build:client": "cd client && npm run build",
         "heroku-postbuild": "npm run build:client"
     },
     "dependencies": {
         "@apollo/server": "^4.10.1",
+        "apollo-server-express": "^3.13.0",
         "bcrypt": "^5.1.1",
         "concurrently": "^8.2.2",
         "dotenv": "^16.4.5",
         "express": "^4.18.3",
         "graphql": "^16.8.1",
         "jsonwebtoken": "^9.0.2",
-        "mongodb": "6.5"
+        "mongodb": "6.5",
+        "mongoose": "^8.2.3"
     },
     "license": "MIT",
     "devDependencies": {
